--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />  
-  <title>Sistema de recursos humanos</title>
+  <title>Venta de Indumentaria</title>
 </head>
 
 <body  style="background-color: rgb(147, 145, 145);">
