--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -6,13 +6,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />  
   <title>Venta de Indumentaria</title>
 </head>
 
-<body  style="background-color: rgb(147, 145, 145);">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
