--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -12,7 +12,8 @@
   <title>Venta de Indumentaria</title>
 </head>
 
-<body>
+<body>  
+  <img src="../src/assets/composicion-de-hermosas-flores-rosas-y-plantas.jpg" alt="">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
